# PersonalResearchAgent

./: .gitignore  README.md  pyproject.toml
examples/: basic_usage.py  quick_test.py
src/personal_research_agent/: __init__.py  cli.py  config.py
src/personal_research_agent/agents/: __init__.py
src/personal_research_agent/core/: __init__.py  agent.py  memory.py  state.py
src/personal_research_agent/tools/: __init__.py  document_processor.py  summarizer.py  web_search.py
tests/: test_agent.py  test_config.py  test_tools.py
